[package]
name = "stylus-erc20"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = "0.5.2"
mini-alloc = "0.4.2"
alloy-primitives = "0.7.6"
alloy-sol-types = "0.7.6"

[features]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
