[package]
name = "stylus-erc721"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
stylus-sdk = "0.5.0"
mini-alloc = "0.4.2"
alloy-primitives = "0.3.1"
alloy-sol-types = "0.3.1"

[features]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
