[package]
name = "stylus-multisig-example"
version = "0.1.5"
edition = "2021"
keywords = ["arbitrum", "ethereum", "stylus", "alloy", "multisig"]
description = "Stylus multisig example"

[dependencies]
alloy-primitives = "0.3.1"
alloy-sol-types = "0.3.1"
mini-alloc = "0.4.2"
stylus-sdk = { version = "0.5.0", features = ["docs"] }
hex = "0.4.3"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
