[package]
name = "stylus-sending-ether"
version = "0.1.7"
edition = "2021"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus sending ether example"

[dependencies]
alloy-primitives = "0.7.6"
alloy-sol-types = "0.7.6"
mini-alloc = "0.4.2"
stylus-sdk = "0.5.2"
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"

[features]
export-abi = ["stylus-sdk/export-abi"]

[[bin]]
name = "stylus-hello-world"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"